--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>My First CRUD App</title>
     <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+<!--     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script> -->
     <script
             src="https://code.jquery.com/jquery-3.3.1.js"
             integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
@@ -13,12 +16,23 @@
   </head>
   <body>
 
-  <input type="text" class="user-input-title" placeholder="Enter the Title">
-  <textarea class="user-input-body" placeholder="Enter the body of text"></textarea>
+  <div id="toDoContainer">
+    <h1>To-Do List </h1>
+    <input type="text">
 
-  <button class="add-text-btn">add text</button>
-  <button class="del-text-btn">delete text</button>
+    <ul>
+      <!-- items go here -->
+    </ul>
+  </div>
 
-  <div class="display"></div>
+
+<!-- 
+    <input type="text" class="user-input-key" placeholder="Enter the Title">
+    <textarea class="user-input-value" placeholder="Enter the body of text"></textarea>
+
+    <button class="add-text-btn">add text</button>
+    <button class="del-text-btn">delete text</button>
+
+    <div class="display"></div> -->
   </body>
 </html>
