able to now add item, delete item, display items after refresh, and strikethrough complete

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <title>My First CRUD App</title>
     <link rel="stylesheet" href="app.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-<!--     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.9.0/fullcalendar.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script> -->
     <script
             src="https://code.jquery.com/jquery-3.3.1.js"
             integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
@@ -15,24 +13,17 @@
 
   </head>
   <body>
+    <div class="icons-container">
+  <!--     <div> <i class="fa fa-trash"></i><div>
+      <img class="corgi" src=https://cdn.dribbble.com/users/722835/screenshots/2713044/corgi400.gif> -->
+    </div>
+    <div class="input-container">
+      <input class="user-input" type="text" placeholder="Whatchu you need?">
+      <input class="due-date" type="text" placeholder="Due Date">
 
-  <div id="toDoContainer">
-    <h1>To-Do List </h1>
-    <input type="text">
+      <ul>
+      </ul>
+    </div>
 
-    <ul>
-      <!-- items go here -->
-    </ul>
-  </div>
-
-
-<!-- 
-    <input type="text" class="user-input-key" placeholder="Enter the Title">
-    <textarea class="user-input-value" placeholder="Enter the body of text"></textarea>
-
-    <button class="add-text-btn">add text</button>
-    <button class="del-text-btn">delete text</button>
-
-    <div class="display"></div> -->
   </body>
 </html>
