added music icon and corgi icon

--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
   </head>
   <body>
     <div class="icons-container">
-  <!--     <div> <i class="fa fa-trash"></i><div>
-      <img class="corgi" src=https://cdn.dribbble.com/users/722835/screenshots/2713044/corgi400.gif> -->
+      <!-- <div> <i class="fa fa-trash"></i><div> -->
+      <div class="music">
+        <i class="fa fa-music"></i>
+      </div>
+      <img class="corgi" src=https://cdn.dribbble.com/users/722835/screenshots/2713044/corgi400.gif>
     </div>
     <div class="input-container">
       <input class="user-input" type="text" placeholder="Whatchu you need?">
