added corgi functionality and linked to video

--- a/index.html
+++ b/index.html
@@ -13,15 +13,25 @@
 
   </head>
   <body>
-    <div class="icons-container">
-      <!-- <div> <i class="fa fa-trash"></i><div> -->
-      <div class="music">
-        <i class="fa fa-music"></i>
-      </div>
-      <img class="corgi" src=https://cdn.dribbble.com/users/722835/screenshots/2713044/corgi400.gif>
+
+    <div class="friday">
+      <iframe class="fridayVideo" width="560" height="315" src="https://www.youtube.com/embed/kfVsfOSbJY0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
+
+<!--       <div class="corgiContainer">
+       <img class="corgi" src=https://cdn.dribbble.com/users/722835/screenshots/2713044/corgi400.gif>
+      </div> -->
+    
     <div class="input-container">
+      <div class="music">
+        <i class="fa fa-music"></i> 
+        <div class="corgiContainer">
+          <img class="corgi" src=https://cdn.dribbble.com/users/722835/screenshots/2713044/corgi400.gif>
+        </div>
+      </div>
+
       <input class="user-input" type="text" placeholder="Whatchu you need?">
+      <p></p>
       <input class="due-date" type="text" placeholder="Due Date">
 
       <ul>
