--- a/index.html
+++ b/index.html
@@ -10,32 +10,58 @@
             integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
             crossorigin="anonymous"></script>
     <script src="app.js"></script>
+    <script type="text/javascript" src="paper-full.js"></script>
+   
+    <script type="text/paperscript" canvas="myCanvas">
+      
+        var circles = [];
+        function onKeyDown(event){
+          var maxPoint = new Point(view.size.width, view.size.height);
+          var randomPoint = Point.random();
+          var point = maxPoint * randomPoint;
+          var newCircle = new Path.Circle(point, 5);
+          newCircle.fillColor = "yellow"
+          circles.push(newCircle);
+        }
 
+        function onFrame(event){
+          for (var i = 0; i < circles.length; i++) {
+            circles[i].fillColor.hue+=1;
+          }
+        }
+
+    </script>
   </head>
   <body>
+    <canvas id="myCanvas" resize>
+    </canvas>
+    <i class="fa fa-list-ul"></i>
+    <div class="listBody">
+      <!-- <canvas id="myCanvas" resize> -->
+      <div class="input-container">
 
-    <div class="friday">
-      <iframe class="fridayVideo" width="560" height="315" src="https://www.youtube.com/embed/kfVsfOSbJY0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-    </div>
-
-<!--       <div class="corgiContainer">
-       <img class="corgi" src=https://cdn.dribbble.com/users/722835/screenshots/2713044/corgi400.gif>
-      </div> -->
-    
-    <div class="input-container">
-      <div class="music">
-        <i class="fa fa-music"></i> 
-        <div class="corgiContainer">
-          <img class="corgi" src=https://cdn.dribbble.com/users/722835/screenshots/2713044/corgi400.gif>
+        <div class="listHeader">
+          <h2>Do You Boo Boo<img class="corgi" src=https://cdn.dribbble.com/users/722835/screenshots/2713044/corgi400.gif><i class="fa fa-question-circle"></i></h2>
         </div>
+
+        <input class="user-input" type="text" placeholder="Gurl whatchu need?">
+        <p></p>
+        <input class="due-date" type="text" placeholder="Due Date">
+
+        <ul>
+        </ul>
+
       </div>
 
-      <input class="user-input" type="text" placeholder="Whatchu you need?">
-      <p></p>
-      <input class="due-date" type="text" placeholder="Due Date">
+      <div class="friday">
+        <iframe class="fridayVideo" width="560" height="315" src="https://www.youtube.com/embed/kfVsfOSbJY0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      </div>
 
-      <ul>
-      </ul>
+      <!-- <i class="fa fa-list-ul"></i> -->
+
+<!--       <canvas id="myCanvas" resize>
+      </canvas> -->
+
     </div>
 
   </body>
